# raft-ugm-mental-health-chatbot

./: .env  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirement.txt
api/: api.py
api/controller/: admin_controllers.py  auth_controllers.py  chat_controllers.py  history_controllers.py
api/model/: chat_item_model.py  chat_model.py  question_score_model.py  user_model.py
api/repository/: chat_item_repository.py  chat_repository.py  dialog_repository.py  question_score_repository.py  user_repository.py
api/service/: admin_service.py  auth_service.py  chat_service.py
chatbot_engine/: engine.py
chatbot_engine/fine_tuning/: __init__.py
chatbot_engine/llm_client/: __init__.py
chatbot_engine/raft_preparation_pipeline/: __init__.py
chatbot_engine/retriever/: __init__.py  legacyretriever.py
chatbot_engine/vectorstore/: Anger.index  Dissociation.index  General.index  Mania.index  Memory.index  Psychosis.index  Repetitive Thought.index  Sleep Disturbance.index  Substance Use.index  Suicidal.index
chatbot_engine/vectorstore_builder/: __init__.py  data_chunker.py  faiss_indexer.py  ocr_converter.py
config/: config.py
external_data/: conversation_simulation.json  grouped_mental_health_screening.json  original_mental_health_screening.json
external_data/document_text/: Anger.txt  Anxiety.txt  Depression.txt  Dissociation.txt  General.txt  Mania.txt  Memory.txt  Psychosis.txt  Repetitive Thought.txt  Sleep Disturbance.txt  Somatic.txt  Substance Use.txt  Suicidal.txt
web/: web.py
web/view/: admin.html  base.html  chat.html  (+2 more)
(+22 files in other folders)
