[project]
name = "mental-health-chatbot"
version = "0.1.0"
description = "Chatbot engine + Web app for mental health project"
requires-python = ">=3.10"

[project.scripts]
chatbot-engine = "chatbot_engine.__init__:main"
web-app = "web_app.__init__:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["chatbot_engine", "web_app"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
